--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+dj-database-url==0.5.0
 Django==2.1.4
+django-heroku==0.3.1
+flake8==3.6.0
+gunicorn==19.9.0
+mccabe==0.6.1
+psycopg2==2.7.6.1
+pycodestyle==2.4.0
+pyflakes==2.0.0
 pytz==2018.7
+whitenoise==4.1.2
