--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+certifi==2018.11.29
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1.4
 django-heroku==0.3.1
+docker==3.6.0
+docker-pycreds==0.4.0
 flake8==3.6.0
 gunicorn==19.9.0
+idna==2.8
 mccabe==0.6.1
 psycopg2==2.7.6.1
 pycodestyle==2.4.0
 pyflakes==2.0.0
 pytz==2018.7
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+websocket-client==0.54.0
 whitenoise==4.1.2
